# gwm

./: GNUmakefile.in  README  bootstrap  configure.ac  version.sh
assets/: README
source/: color.cpp  color.h  config.h  cursor.cpp  cursor.h  fb.cpp  fb.h  font.cpp  font.h  main.cpp  taskbar.cpp  taskbar.h  window.cpp  window.h
source/widgets/: image.cpp  image.h  textbox.cpp  textbox.h  widget.cpp  widget.h
